# XGBoostLSS-CM

./: README.md  _old_setup.py  pyproject.toml
examples/: simulation_example_Gaussian.ipynb
xgboostlss.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
xgboostlsscm/: __init__.py  model.py  utils.py
xgboostlsscm/distributions/: BCT.py  Beta.py  Expectile.py  StudentT.py  __init__.py
